# bigbotros1

./: README.md
bigbot/: .frames.swp  CMakeLists.txt  bigbot.includes  frames.gv  package (copy).xml  package.xml
bigbot/config/robot/: motorcontrolPWMbaselink.yaml  motorcontrolbasefootprint.yaml  motorcontrolbaselink.yaml  motorcontroltestbasefootprint.yaml  motorcontroltestbaselink.yaml  wiredjoy.yaml
bigbot/launch/: wiredjoy.launch
bigbot/launch/pibot/: debugMotorandSensor.launch  move_base_amcl_5cm.launch  move_baseefk.launch  myMotor.launch  myOdom.launch  mybot.launch  mybotbak.launch  mymap_servergdb.launch  mysonar.launch  pibot_2dnav.launch  pibot_2dnav.launchbak2  pibot_2dnavamcl.launch
bigbot/src/: bigbot.files  botconfig.cpp  dosquare.cpp  dosquare.h  fake_scan.cpp  joyteleop.cpp  motorControl.cpp  pubpwm.cpp  sensordata.h  subpwm.cpp  teleop.cpp  testbotconfig.cpp  testencoder.cpp  testpubodom.cpp  testsensordata.cpp  testserial.cpp
bigbot/src/oldbotsource/: Com.cs  FSM.c  Form1.cs  MotorControl.cs  MotorandSensor.cpp  Robot.c  VoteObject.cpp  main.c  r2serial.cpp  r2serial.h  readingcom.c  voteobject.h
bigbot_bno055/src/: bno.cpp  bno.h  motorControl.cpp  serial.cpp
bigbot_camera/: CMakeLists.txt  package.xml
bigbot_camera/config/: bigbot_camera.config
bigbot_camera/src/: CameraConfig.h  camera.cpp
bigbot_description/: CMakeLists.txt  package.xml
bigbot_description/launch/: displaybigbot.launch  displaybigbot2.launch  movebigbot.launch
bigbot_description/urdf/: bigbot.urdf  bigbot.xacro  bigbot2.urdf  bigbot2.xacro  bigbot3.urdf  bigbot3.xacro  readme
bigbot_gazebo/: CMakeLists.txt  package.xml
bigbot_gazebo/launch/: gazebo.launch
bigbot_nav/: CMakeLists.txt  package.xml
bigbot_nav/config/: bigbot_base_local_planner_params.yaml  bigbot_costmap_common_params.yaml  bigbot_map_server.yaml  nav_test_params.yaml  pibot_map_serverbackup.yaml
bigbot_nav/config/map/: bigbot_global_costmap_params.yaml  bigbot_local_costmap_params.yaml
bigbot_nav/config/odom/: bigbot_global_costmap_params.yaml  bigbot_local_costmap_params.yaml
bigbot_nav/launch/: bigbotnavmap.launch  bigbotnavodom.launch  bigbotnavslam.launch
bigbot_nav/launch/include/: amcl.launch  gmapping.launch  move_base.launch
bigbot_nav/map/: lr1.pgm  lr1.yaml
bigbot_nav/robpi_gazebo/: CMakeLists.txt  package.xml
bigbot_nav/robpi_gazebo/launch/: gazebo.launch  livingroom.launch
bigbot_nav/robpi_gazebo/worlds/: livingroom.world
bigbot_nav/src/: nav_test.py
