<?xml version="1.0"?>
<package format="2">
  <name>bigbot_gazebo</name>
  <version>0.1.0</version>
  <description>bigbot in Gazebo.</description>
  <maintainer email="a@efk.com">a</maintainer>
  <author email="a@efk.com">a</author>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
</package>
